fixed alignment and trash icon

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
   color: #223548;
 }
 
+h2{
+    margin-left: 20px;
+}
+
 input, button {
   font-family: 'Manjari', sans-serif;
   border: none;
@@ -21,7 +25,7 @@ input, button {
 
 .day-container {
   border: 1px solid #f5f6f7;
-  padding: 10px;
+  padding: 20px;
   margin-bottom: 10px;
   border-radius: 5px;
   position: relative;
@@ -38,7 +42,7 @@ input, button {
 }
 
 .trash-icon {
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .trash-icon:hover::after,
@@ -223,6 +227,7 @@ input, button {
 .itinerary-info {
   color: gray;
   opacity: 0.7;
+  margin-left: 20px;
   margin-bottom: 10px;
 }
 
